# CS5481-Project-Stage3

./: .gitignore  9gag-memes-dataset-stage1.tsv  README.md  build_venv.sh  data_storage.py  main.py  myjob.condor  myproc.sh  script.py  tail.py  test.py
results/: 9gag-memes-dataset-stage1-10k.tsv  9gag-memes-dataset-stage3-7k-words-cleaned.txt  9gag-memes-llama-description-7k-sentiment.tsv
src/: pyproject.toml
src/core/: data_storage.py
steps/analysis_sentiment_upvotes/: README.md  bar_main.py  build_venv.sh  spotted_main.py
steps/connect_memes/: README.md  build_venv.sh  main.py
steps/generate_meme_network_graph/: README.md  build_venv.sh  main.py  output.html
steps/intern_vl_2_image_meaning/: README.md  build_venv.sh  main.py  query.py  tail.py  test.py
steps/intern_vl_2_meme_category/: README.md  build_venv.sh  main.py  tail.py  transform.py
steps/intern_vl_2_ocr/: .gitignore  README.md  build_venv.sh  from_txt_to_bin.py  tail.py
steps/llama3_2_describe_the_image/: README.md  build_venv.sh  main.py  tail.py  test.py
steps/nltk_data_cleaning/: README.md  build_venv.sh  main.py
steps/nltk_sentiment_analysis/: README.md  main.py
steps/process_meme_category/: README.md  build_venv.sh  main.py  tail.py
steps/wordcloud/: README.md  build_venv.sh  main.py
